syntax = "proto3";

package todo;

service TodoService {
    rpc Create(Todo) returns (Todo);
    rpc Get(ByIdReq) returns (Todo);
    rpc List(ListReq) returns (ListResp);
    rpc Update(Todo) returns (Todo);
    rpc Delete(ByIdReq) returns (Empty);
    rpc ListOverdue(ListTime) returns(ListResp);
}

message Empty {}

message Todo {
    int64 id = 1;
    string assignee = 2;
    string title = 3;
    string summary = 4;
    string deadline = 5;
    string status = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

message ByIdReq {
    int64 id = 1;
}

message ListReq {
    int64 page = 1;
    int64 limit = 2;
}

message ListResp {
    repeated Todo todos = 1;
    int64 count = 2;
}

message ListTime {
    ListReq listPage = 1;
    string toTime = 2;
}